height issue on mobile

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,6 +17,7 @@ body {
   height: calc(100vh - calc(100vh - 100%));
   width: 100%;
   margin: 0;
+  padding: 0;
 }
 
 //@media screen and (max-width: 415px) {
